# colorlight

./: .gitignore  LICENSE  Makefile  README.md  colorlight.dart  eth_bindings.dart  loadimg.dart  pubspec.yaml  sendframe.dart
deno/: .gitignore  Makefile  README.md
deno/lib/: colorlight.ts  eth.ts
deno/libeth/: sendeth.c  sendeth.h
deno/src/: loadimg.ts  sweep.ts
eth_library/: .gitignore  CMakeLists.txt  README.md  sendeth.c  sendeth.def  sendeth.h
node/: README.md  binding.gyp  package.json  tsconfig.json
node/src/: main.ts  sendent.ts
node/src/lib/: colorlight.ts  eth.ts  sendenth.ts
node/src/native/: napi_sendeth.c  sendeth.c  sendeth.h
py/: README.md  detect.py
